tests/ui/feature-gates/feature-gate-never_patterns.stderr
error[E0408]: variable `_x` is not bound in all patterns
  --> $DIR/feature-gate-never_patterns.rs:8:19
   |
LL |     let (Ok(_x) | Err(&!)) = res.as_ref();
   |             --    ^^^^^^^ pattern doesn't bind `_x`
   |             |
   |             variable not in all patterns

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:8:24
   |
LL |     let (Ok(_x) | Err(&!)) = res.as_ref();
   |                        ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:15:13
   |
LL |             ! => {}
   |             ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:24:13
   |
LL |             ! => {}
   |             ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0408, E0658.
For more information about an error, try `rustc --explain E0408`.
